1. aegis-room 에 svc3 필드 추가 2. 발신데이터를 우선해서 aegis-room 에 저장하도록 수정